# exercism-monorepo

rust/: .gitignore  BUILD.md  Cargo.toml  Makefile.toml  flake.nix
rust/anagram/: Cargo.toml
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/anagram/tests/: anagram.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/beer-song/: .solution.json
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/difference-of-squares/: .solution.json
rust/difference-of-squares/.exercism/: metadata.json
rust/difference-of-squares/src/: lib.rs
rust/flower-field/: NOTES.md
rust/flower-field/.exercism/: metadata.json
rust/flower-field/src/: lib.rs
rust/flower-field/tests/: flower_field.rs
rust/gigasecond/: Cargo.toml
rust/gigasecond/.exercism/: metadata.json
rust/gigasecond/src/: lib.rs
rust/grains/: .solution.json
rust/grains/.exercism/: metadata.json
rust/grains/src/: lib.rs
rust/hello-world/: .solution.json
rust/hello-world/.exercism/: metadata.json
rust/leap/: .solution.json
rust/leap/.exercism/: metadata.json
rust/leap/src/: lib.rs
rust/luhn/.exercism/: metadata.json
rust/prime-factors/: .solution.json
rust/pythagorean-triplet/: Cargo.toml
rust/raindrops/: .solution.json
rust/reverse-string/: .solution.json
rust/scripts/: test-make-targets.sh
rust/sublist/: NOTES.md
rust/sum-of-multiples/: .solution.json
(+67 files in other folders)
